--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Zomato</title>
     <link
       rel="stylesheet"
-      href="C:\Users\dell\OneDrive\Desktop\Zomato\style.css"
+      href="style.css"
     />
     <link
       rel="icon"
