--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Zomato</title>
     <link
       rel="stylesheet"
-      href="style.css"
+      href="https://style.css
+    "
+
     />
     <link
       rel="icon"
